Episodes section done

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>Podcast</title>
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500&family=IBM+Plex+Sans:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
-    />
+    <link
+        href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500&family=IBM+Plex+Sans:wght@300&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" />
 </head>
 
 <body>
@@ -20,15 +21,15 @@
             <i class="fa fa-bars Hamburguer" aria-hidden="true"></i>
         </label>
         <label for="Hamburguer" class="Header-close"><i class="fa fa-times Close" aria-hidden="true"></i>
-        </label> 
-        <nav  class="Header-menu"> 
+        </label>
+        <nav class="Header-menu">
             <ul class="Header-items">
                 <li class="Header-item"><a href="" class="Header-link">Episodios</a></li>
                 <li class="Header-item"><a href="" class="Header-link">Nosotros</a></li>
                 <li class="Header-item"><a href="" class="Header-link">Entrevistas</a></li>
                 <li class="Header-item"><a href="" class="Header-link">Tópicos</a></li>
             </ul>
-        </nav>        
+        </nav>
     </header>
 
     <main class="Content">
@@ -40,28 +41,32 @@
                 Un podcast que explora el mundo de la programación. Nuevos episodios, todos los jueves cada 15 días.
             </p>
             <p class="Content-description-desktop">
-                El portal de podcasts que explora el mundo de la programación y la tecnología. Nuevos episodios, todos los
+                El portal de podcasts que explora el mundo de la programación y la tecnología. Nuevos episodios, todos
+                los
                 jueves cada 15 días.
             </p>
             <button class="Content-knowMore">CONOCÉ MÁS</button>
         </section>
-        
-        <div class="Content-grid">
-            <section class="Content-episodes">
-                <h2 class="Content-episodes-title">Episodios</h2>
-                <div class="Div-iframe">
 
-                    <iframe src="https://open.spotify.com/embed-podcast/episode/4B39D4l8XfiyRsV4f53vSe" class="Content-episodes-iframe"></iframe>
-                </div>
-               
-                <iframe src="https://open.spotify.com/embed-podcast/episode/1ezdL2ivAGLwSE6Xbssxqt" class="Content-episodes-iframe"></iframe>
-                <iframe src="https://open.spotify.com/embed-podcast/episode/3cWta1iiQSfvrdHaCbLkSD" class="Content-episodes-iframe"></iframe>
-                <iframe src="https://open.spotify.com/embed-podcast/episode/5mddqHiI96V0ZMdMidn3WW" class="Content-episodes-iframe"></iframe>
+        <div class="Content-grid">
+            <section class="Episodes">
+                <h2 class="Episodes-title">Episodios</h2>
+                <div class="Episodes-grid">
+                    <iframe src="https://open.spotify.com/embed-podcast/episode/4B39D4l8XfiyRsV4f53vSe"
+                    class="Episodes-iframe" allowfullscreen></iframe>
+                <iframe src="https://open.spotify.com/embed-podcast/episode/1ezdL2ivAGLwSE6Xbssxqt"
+                    class="Episodes-iframe"></iframe>
+                <iframe src="https://open.spotify.com/embed-podcast/episode/3cWta1iiQSfvrdHaCbLkSD"
+                    class="Episodes-iframe"></iframe>
+                <iframe src="https://open.spotify.com/embed-podcast/episode/5mddqHiI96V0ZMdMidn3WW"
+                    class="Episodes-iframe"></iframe>
+                </div>                
             </section>
             <section class="Content-weComeFrom">
                 <img class="Content-image-secret" src="./images/phone.png" alt="Phone"></img>
                 <h2 class="Content-weComeFrom-title">De dónde venimos</h2>
-                <p class="COntent-weComeFrom-p">Our posturings, our imagined self-importance, the delusion that we have some
+                <p class="COntent-weComeFrom-p">Our posturings, our imagined self-importance, the delusion that we have
+                    some
                     privileged position in the Universe, are challenged by this point of pale light.</p>
                 <p class="COntent-weComeFrom-p">Our planet is a lonely speck in the great enveloping cosmic dark. In our
                     obscurity, in all this vastness, there is no hint that help will come from elsewhere to save us from
