We come from mobile view done

--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
                     class="Episodes-iframe"></iframe>
                 </div>                
             </section>
-            <section class="Content-weComeFrom">
+            <section class="WeComeFrom">
                 <img class="Content-image-secret" src="./images/phone.png" alt="Phone"></img>
-                <h2 class="Content-weComeFrom-title">De dónde venimos</h2>
-                <p class="COntent-weComeFrom-p">Our posturings, our imagined self-importance, the delusion that we have
+                <h2 class="WeComeFrom-title">De dónde venimos</h2>
+                <p class="WeComeFrom-p">Our posturings, our imagined self-importance, the delusion that we have
                     some
                     privileged position in the Universe, are challenged by this point of pale light.</p>
-                <p class="COntent-weComeFrom-p">Our planet is a lonely speck in the great enveloping cosmic dark. In our
+                <p class="WeComeFrom-p">Our planet is a lonely speck in the great enveloping cosmic dark. In our
                     obscurity, in all this vastness, there is no hint that help will come from elsewhere to save us from
                     ourselves.</p>
             </section>
