--- a/index.html
+++ b/index.html
@@ -53,24 +53,27 @@
                 <h2 class="Episodes-title">Episodios</h2>
                 <div class="Episodes-grid">
                     <iframe src="https://open.spotify.com/embed-podcast/episode/4B39D4l8XfiyRsV4f53vSe"
-                    class="Episodes-iframe" allowfullscreen></iframe>
-                <iframe src="https://open.spotify.com/embed-podcast/episode/1ezdL2ivAGLwSE6Xbssxqt"
-                    class="Episodes-iframe"></iframe>
-                <iframe src="https://open.spotify.com/embed-podcast/episode/3cWta1iiQSfvrdHaCbLkSD"
-                    class="Episodes-iframe"></iframe>
-                <iframe src="https://open.spotify.com/embed-podcast/episode/5mddqHiI96V0ZMdMidn3WW"
-                    class="Episodes-iframe"></iframe>
-                </div>                
+                        class="Episodes-iframe" allowfullscreen></iframe>
+                    <iframe src="https://open.spotify.com/embed-podcast/episode/1ezdL2ivAGLwSE6Xbssxqt"
+                        class="Episodes-iframe"></iframe>
+                    <iframe src="https://open.spotify.com/embed-podcast/episode/3cWta1iiQSfvrdHaCbLkSD"
+                        class="Episodes-iframe"></iframe>
+                    <iframe src="https://open.spotify.com/embed-podcast/episode/5mddqHiI96V0ZMdMidn3WW"
+                        class="Episodes-iframe"></iframe>
+                </div>
             </section>
             <section class="WeComeFrom">
                 <img class="Content-image-secret" src="./images/phone.png" alt="Phone"></img>
-                <h2 class="WeComeFrom-title">De dónde venimos</h2>
-                <p class="WeComeFrom-p">Our posturings, our imagined self-importance, the delusion that we have
-                    some
-                    privileged position in the Universe, are challenged by this point of pale light.</p>
-                <p class="WeComeFrom-p">Our planet is a lonely speck in the great enveloping cosmic dark. In our
-                    obscurity, in all this vastness, there is no hint that help will come from elsewhere to save us from
-                    ourselves.</p>
+                <div class="WeComeFrom-text">
+                    <h2 class="WeComeFrom-title">De dónde venimos</h2>
+                    <p class="WeComeFrom-p">Our posturings, our imagined self-importance, the delusion that we have
+                        some
+                        privileged position in the Universe, are challenged by this point of pale light.</p>
+                    <p class="WeComeFrom-p">Our planet is a lonely speck in the great enveloping cosmic dark. In our
+                        obscurity, in all this vastness, there is no hint that help will come from elsewhere to save us
+                        from
+                        ourselves.</p>
+                </div>
             </section>
         </div>
         <section class="Content-guests">
