Guests section done

--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
                 </div>
             </section>
         </div>
-        <section class="Content-guests">
-            <h2 class="Content-guests-title">Invitadas/os estelares</h2>
+        <section class="Guests">
+            <h2 class="Guests-title">Invitadas/os estelares</h2>
             <img src="./images/grace-hopper.png" alt="Grace Hopper">
             <img src="./images/Katie-Bouman.png" alt="Katie-Bouman">
             <img src="./images/Margaret_Hamilton.png" alt="Margaret_Hamilton">
             <img src="./images/An_E.R.A.Univac.png" alt="E.R.A.Univac">
-            <img src="./images/Computer_operators.png" alt="Comuter operators">
+            <img src="./images/Computer-operators.png" alt="Computer operators">
             <img src="./images/susan-kare.png" alt="Susan Kare">
         </section>
         <section class="Content-topics">
