Topics section done for mobile

--- a/index.html
+++ b/index.html
@@ -85,24 +85,24 @@
             <img src="./images/Computer-operators.png" alt="Computer operators">
             <img src="./images/susan-kare.png" alt="Susan Kare">
         </section>
-        <section class="Content-topics">
-            <h2 class="Content-topics-title">Algunos de nuestros temas</h2>
-            <div class="Content-topics-div">
-                <i class="Content-topics-icon"></i>
-                <h3 class="Content-topics-subtitle"><a href="" class="Content-topic-link">Trabajo remoto</a></h3>
+        <section class="Topics">
+            <h2 class="Topics-title">Algunos de nuestros temas</h2>
+            <div class="Topics-div">
+                <img class="Topics-icon" src="./images/icon1.svg" alt="Files image">
+                <h3 class="Topics-subtitle"><a href="" class="Topics-link">Trabajo remoto</a></h3>
             </div>
-            <div class="Content-topics-div">
-                <i class="Content-topics-icon"></i>
-                <h3 class="Content-topics-subtitle"><a href="" class="Content-topic-link">Repensando la programación</a>
+            <div class="Topics-div">
+                <img class="Topics-icon" src="./images/icon2.svg" alt="Thinking image">
+                <h3 class="Topics-subtitle"><a href="" class="Topics-link">Repensando la programación</a>
                 </h3>
             </div>
-            <div class="Content-topics-div">
-                <i class="Content-topics-icon"></i>
-                <h3 class="Content-topics-subtitle"><a href="" class="Content-topic-link">Bases del código</a></h3>
+            <div class="Topics-div">
+                <img class="Topics-icon" src="./images/icon3.svg" alt="Computer">
+                <h3 class="Topics-subtitle"><a href="" class="Topics-link">Bases del código</a></h3>
             </div>
-            <div class="Content-topics-div">
-                <i class="Content-topics-icon"></i>
-                <h3 class="Content-topics-subtitle"><a href="" class="Content-topic-link">Seguridad informática</a></h3>
+            <div class="Topics-div">
+                <img class="Topics-icon" src="./images/icon4.svg" alt="Network">
+                <h3 class="Topics-subtitle"><a href="" class="Topics-link">Seguridad informática</a></h3>
             </div>
 
         </section>
