Last News done for mobile view

--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
             </div>
 
         </section>
-        <section class="Content-lastsNews">
-            <h2 class="Content-lastsNews-title">¿Querés las últimas novedades?</h2>
-            <button class="Content-lastsNews-button"></button>
+        <section class="LastsNews">
+            <h2 class="LastsNews-title">¿Querés las últimas novedades?</h2>
+            <button class="LastsNews-button">ESCUCHÁ LOS EPISODIOS</button>
         </section>
     </main>
     <footer class="Footer">
