--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Podcast</title>
     <link rel="stylesheet" href="./styles/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/be05b69b52.js" crossorigin="anonymous"></script>
     <link
         href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500&family=IBM+Plex+Sans:wght@300&display=swap"
         rel="stylesheet">
@@ -112,13 +112,13 @@
         </section>
     </main>
     <footer class="Footer">
-        <p class="Footer-copyright"></p>
+        <p class="Footer-copyright">© 2019— Hello blue pale dot</p>
         <ul class="Footer-items">
-            <li class="Footer-items"><a href="" class="Footer-link"><i class="Footer-icon">i&</i></a></li>
-            <li class="Footer-items"><a href="" class="Footer-link"><i class="Footer-icon">i&</i></a></li>
-            <li class="Footer-items"><a href="" class="Footer-link"><i class="Footer-icon">i&</i></a></li>
-            <li class="Footer-items"><a href="" class="Footer-link"><i class="Footer-icon">i&</i></a></li>
-            <li class="Footer-items"><a href="" class="Footer-link"><i class="Footer-icon">i&</i></a></li>
+            <li class="Footer-item"><a href="https://www.spotify.com/" target="_blank" class="Footer-link"><i class="fab fa-spotify"></i></a></li>
+            <li class="Footer-item"><a href="https://www.instagram.com/wspvt/?hl=es" target="_blank" class="Footer-link"><i class="fab fa-instagram"></i></a></li>
+            <li class="Footer-item"><a href="https://twitter.com/pbdenergy?lang=es" target="_blank" class="Footer-link"><i class="fab fa-twitter"></i></a></li>
+            <li class="Footer-item"><a href="https://www.facebook.com/pages/category/Community/The-Pale-Blue-Dot-112585562113444/" target="_blank" class="Footer-link"><i class="fab fa-facebook"></i></a></li>
+            <li class="Footer-item"><a href="https://telegram.org/" target="_blank" class="Footer-link"><i class="fab fa-telegram"></i></a></li>
         </ul>
     </footer>
 </body>
