--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         </label>
         <nav class="Header-menu">
             <ul class="Header-items">
-                <li class="Header-item"><a href="" class="Header-link">Episodios</a></li>
-                <li class="Header-item"><a href="" class="Header-link">Nosotros</a></li>
-                <li class="Header-item"><a href="" class="Header-link">Entrevistas</a></li>
-                <li class="Header-item"><a href="" class="Header-link">Tópicos</a></li>
+                <li class="Header-item"><a href="#Episodes" class="Header-link">Episodios</a></li>
+                <li class="Header-item"><a href="#Us" class="Header-link">Nosotros</a></li>
+                <li class="Header-item"><a href="#Guests" class="Header-link">Entrevistas</a></li>
+                <li class="Header-item"><a href="#Topics_section" class="Header-link">Tópicos</a></li>
             </ul>
         </nav>
     </header>
@@ -49,7 +49,7 @@
         </section>
 
         <div class="Content-grid">
-            <section class="Episodes">
+            <section class="Episodes" id="Episodes">
                 <h2 class="Episodes-title">Episodios</h2>
                 <div class="Episodes-grid">
                     <iframe src="https://open.spotify.com/embed-podcast/episode/4B39D4l8XfiyRsV4f53vSe"
@@ -62,9 +62,9 @@
                         class="Episodes-iframe"></iframe>
                 </div>
             </section>
-            <section class="WeComeFrom">
+            <section class="WeComeFrom" >
                 <img class="Content-image-secret" src="./images/phone.png" alt="Phone"></img>
-                <div class="WeComeFrom-text">
+                <div class="WeComeFrom-text" id="Us">
                     <h2 class="WeComeFrom-title">De dónde venimos</h2>
                     <p class="WeComeFrom-p">Our posturings, our imagined self-importance, the delusion that we have
                         some
@@ -76,7 +76,7 @@
                 </div>
             </section>
         </div>
-        <section class="Guests">
+        <section class="Guests" id="Guests">
             <h2 class="Guests-title">Invitadas/os estelares</h2>
             <img src="./images/grace-hopper.png" alt="Grace Hopper">
             <img src="./images/Katie-Bouman.png" alt="Katie-Bouman">
@@ -85,7 +85,7 @@
             <img src="./images/Computer-operators.png" alt="Computer operators">
             <img src="./images/susan-kare.png" alt="Susan Kare">
         </section>
-        <section class="Topics">
+        <section class="Topics" id="Topics_section">
             <h2 class="Topics-title">Algunos de nuestros temas</h2>
             <div class="Topics-div">
                 <img class="Topics-icon" src="./images/icon1.svg" alt="Files image">
