--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <section class="Content-description">
             <h1 class="Content-description-title">Hello</h1>
             <h1 class="Content-description-title"> world</h1>
-            <h1 class="Content-description-title"> pale blue dot.</h1>
+            <h1 class="Content-description-title"> pale blue dot</h1>
             <p class="Content-description-mobile">
                 Un podcast que explora el mundo de la programación. Nuevos episodios, todos los jueves cada 15 días.
             </p>
@@ -63,7 +63,7 @@
                 </div>
             </section>
             <section class="WeComeFrom" >
-                <img class="Content-image-secret" src="./images/phone.png" alt="Phone"></img>
+                <img class="Content-image-secret" src="./images/phone.png" alt="Phone">
                 <div class="WeComeFrom-text" id="Us">
                     <h2 class="WeComeFrom-title">De dónde venimos</h2>
                     <p class="WeComeFrom-p">Our posturings, our imagined self-importance, the delusion that we have
